# git-deptop

./: .gitignore  .pre-commit-hooks.yaml  README.md  pyproject.toml  setup.py
src/git_deptop/: __main__.py
