[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "git-deptop"
version = "0.0.1"
authors = [
    { name = "James S. Abreu Mieses", email = "jeandsmith@protonmail.com" },
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["pytest-cov", "pytest"]
dynamic = ["scripts", "license"]

[project.urls]
Homepage = "https://github.com/Jeandsmith/git-deptop"
Issues = "https://github.com/Jeandsmith/git-deptop/issues"
